chrome overflow fix

--- a/src/style.css
+++ b/src/style.css
@@ -954,6 +954,10 @@ section.projects {
   margin-top: 30px;
 }
 
+.dropdown {
+  overflow-y: hidden;
+}
+
 .dropdown-content {
   opacity: 0;
   transform: scaleY(0%);
